--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,138 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.line {
+  font-family: "__Roboto_Mono_758d04", "__Roboto_Mono_Fallback_758d04";
+  font-size: 13px;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: #a2a2a6;
+  box-sizing: border-box;
+  content: "";
+  position: fixed;
+  z-index: 1;
+  background: #26262d;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.top {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.bottom {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.left {
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 100%;
+}
+
+.right {
+  top: 0;
+  right: 0;
+  width: 20px;
+  height: 100%;
+}
+
+.container {
+  position: relative;
+  z-index: 10;
+  min-height: 100vh;
+  background-color: #1a1a1a;
+  color: #fff;
+}
+
+header {
+  padding: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav a.active {
+  color: #f39c12;
+}
+
+nav .btn {
+  border: 1px solid #fff;
+  padding: 5px 10px;
+}
+
+main {
+  padding: 30px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+h1 {
+  font-size: 80px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: relative;
+}
+
+footer {
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  bottom: 15px;
+  position: fixed;
+  padding: 15px 60px 30px;
+}
+
+footer a {
+  color: #bbb;
+  margin: 0 10px;
+}
+
+/* Circular avatar style */
+.avatar {
+  width: 100px; /* set the width */
+  height: 100px; /* set the height */
+  border-radius: 50%; /* makes it circular */
+  object-fit: cover; /* ensures image covers the circle without distortion */
+  border: 2px solid #ccc; /* optional border */
+  display: inline-block; /* inline-block to avoid block behavior */
+}
+.icon {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+a span {
+  background-color: #f26b38;
+  border-radius: 4px;
+  padding: 2px 2px;
 }
